--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -55,6 +55,27 @@ p.event-type.alumni {
     padding: 0 3px 0 3px;
 }
 
+p.event-type.series1 {
+    color: black;
+    background-color: #50e9e1;
+    border-radius: 5px;
+    padding: 0 3px 0 3px;
+}
+
+p.event-type.series2 {
+    color: black;
+    background-color: #97ccf0;
+    border-radius: 5px;
+    padding: 0 3px 0 3px;
+}
+
+#button-link {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: none;
+}
+
 body p.host {
     font-style: italic;
     margin: 0;
@@ -67,4 +88,42 @@ ul {
 
 ul > li:not(:last-child) {
     margin-bottom: 20px;
+}
+
+ol {
+    font-family: 'Karla', sans-serif;
+    font-weight: 400;
+    color: #fff;
+    letter-spacing: -0.05em;
+}
+
+ol > li:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+h2.proficiency.beginner {
+    color: black;
+    background-color: #216ABD;
+    border-radius: 5px;
+    padding: 0 3px 0 3px;
+}
+
+h2.proficiency.intermediate {
+    color: black;
+    background-color: #FA991C;
+    border-radius: 5px;
+    padding: 0 3px 0 3px;
+}
+
+h2.proficiency.advanced {
+    color: black;
+    background-color: #06C38F;
+    border-radius: 5px;
+    padding: 0 3px 0 3px;
+}
+
+.workshop-line {
+    display: flex;
+    gap: 10px;
+    align-items: baseline;
 }
