Remove button background

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,7 +12,12 @@ h1 {
     letter-spacing: -0.05em;
 }
 
-h2, h3, h4, h5, h6, p {
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     font-family: 'Karla', sans-serif;
     font-weight: 400;
     color: #fff;
@@ -26,7 +31,7 @@ h2, h3, h4, h5, h6, p {
     /* justify-content: space-between; */
 }
 
-.workshop-title-time > * {
+.workshop-title-time>* {
     margin: 0;
 }
 
@@ -74,6 +79,7 @@ p.event-type.series2 {
     padding: 0;
     border: none;
     background-color: none;
+    background: none;
 }
 
 body p.host {
@@ -86,7 +92,7 @@ ul {
     list-style: none;
 }
 
-ul > li:not(:last-child) {
+ul>li:not(:last-child) {
     margin-bottom: 20px;
 }
 
@@ -97,7 +103,7 @@ ol {
     letter-spacing: -0.05em;
 }
 
-ol > li:not(:last-child) {
+ol>li:not(:last-child) {
     margin-bottom: 20px;
 }
 
