--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ input, select, textarea {
 		background-attachment: fixed;
 		background-repeat: repeat, no-repeat, auto;
 		position: relative;
-		background-color: #150C07;
+		background-color: #00d9ff;
 		line-height: 1.75em;
 		overflow-x: hidden;
 		overflow-y: auto;
@@ -714,8 +714,8 @@ input, select, textarea {
 /* Popup */
 
 	.poptrox-popup {
-		background: #1a1f2c;
-		background: rgba(18, 21, 29, 0.9);
+		background: #222222;
+		/* background: rgba(18, 21, 29, 0.9); */
 		box-shadow: 0px 0px 0px 10px #fff, 0px 10px 60px 10px rgba(8, 11, 19, 0.55);
 		cursor: default;
 	}
