--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,10 +46,13 @@ p {
     padding: 3px 4px 3px 4px;
     margin: 0;
     border: none;
+}
+
+.event-type.btn {
     transition: transform .1s;
 }
 
-.event-type.workshop:hover {
+.event-type.btn:hover {
     cursor: pointer;
     transform: scale(1.05);
 }
@@ -58,28 +61,36 @@ p {
     color: black;
     background-color: #FA991C;
     border-radius: 5px;
-    padding: 0 3px 0 3px;
+    padding: 3px 4px 3px 4px;
+    margin: 0;
+    border: none;
 }
 
 .event-type.alumni {
     color: black;
     background-color: #06C38F;
     border-radius: 5px;
-    padding: 0 3px 0 3px;
+    padding: 3px 4px 3px 4px;
+    margin: 0;
+    border: none;
 }
 
 .event-type.series1 {
     color: black;
     background-color: #50e9e1;
     border-radius: 5px;
-    padding: 0 3px 0 3px;
+    padding: 3px 4px 3px 4px;
+    margin: 0;
+    border: none;
 }
 
 .event-type.series2 {
     color: black;
     background-color: #97ccf0;
     border-radius: 5px;
-    padding: 0 3px 0 3px;
+    padding: 3px 4px 3px 4px;
+    margin: 0;
+    border: none;
 }
 
 #button-link {
