--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,7 +409,7 @@ input, select, textarea {
 			}
 
 			#main .item.intro {
-				background-color: #06c38f;
+				background-color: black;
 				background-image: url("images/overlay.png");
 				display: -moz-flex;
 				display: -webkit-flex;
@@ -431,6 +431,11 @@ input, select, textarea {
 				line-height: 1em;
 				/* padding: 1em 1em ; */
 				}
+
+				#main .item.intro img {
+					height: 100%;
+					/* padding: 1em 1em ; */
+					}
 
 				#main .item.intro p {
 					font-size: 1.25em;
@@ -552,6 +557,16 @@ input, select, textarea {
 					width: 34em;
 				}
 
+				#main .item.intro {
+					background-color: none;
+					/* padding: 1em 1em ; */
+					}
+
+				#main .item.intro img {
+					height: 100%;
+					/* padding: 1em 1em ; */
+					}
+
 		}
 
 		@media screen and (max-width: 736px) {
@@ -607,8 +622,26 @@ input, select, textarea {
 							font-size: 1em;
 						}
 
+						#main .item.intro {
+							background-color: none;
+							/* padding: 1em 1em ; */
+							}
+		
+						#main .item.intro img {
+							height: 100%;
+							/* padding: 1em 1em ; */
+							}
+
 					#main .item.thumb h2 {
-						display: none;
+						position: absolute;
+						bottom: 0;
+						left: 0;
+						background: rgba(18, 21, 29, 0.85);
+						width: 100%;
+						padding: 1em;
+						font-weight: 400;
+						line-height: 1em;
+						z-index: 2;
 					}
 
 		}
@@ -617,6 +650,28 @@ input, select, textarea {
 
 			#main .item {
 				height: 10em;
+			}
+
+			#main .item.intro {
+				background-color: none;
+				/* padding: 1em 1em ; */
+				}
+
+			#main .item.intro img {
+				height: 100%;
+				/* padding: 1em 1em ; */
+				}
+
+			#main .item.thumb h2 {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				background: rgba(18, 21, 29, 0.85);
+				width: 100%;
+				padding: 1em;
+				font-weight: 400;
+				line-height: 1em;
+				z-index: 2;
 			}
 
 		}
