--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,6 +225,10 @@ ol {
     padding-left: 10px;
     border-radius: 10px;
     color: #06C38F;
+    font-family: 'Karla',
+    sans-serif;
+    font-weight: 400;
+    letter-spacing: -0.05em;
 }
 
 ul ol {
@@ -254,14 +258,6 @@ ul>li:not(:last-child) {
 ul li p,
 ol li p {
     margin-top: 5px;
-}
-
-ol,
-ul {
-    font-family: 'Karla', sans-serif;
-    font-weight: 400;
-    color: #fff;
-    letter-spacing: -0.05em;
 }
 
 h2.proficiency.beginner {
